fixes dept styling, need to debug iphone 5 overflow

--- a/src/components/Pages/_Department.scss
+++ b/src/components/Pages/_Department.scss
@@ -30,6 +30,8 @@
   color: $coa-color-white;
   font-size: 1.5rem;
   letter-spacing: 0.15rem;
+  font-weight: $coa-font-semibold;
+  margin-bottom: 0;
 }
 
 .coa-DepartmentPage__topservices-header--desktop {
